[gd_scene load_steps=13 format=3 uid="uid://h2gbghaba7ec"]

[ext_resource type="Texture2D" uid="uid://ckr0isu4oe6rb" path="res://graphics/backgrounds/background1.png" id="1_lbhrr"]
[ext_resource type="Script" uid="uid://dq8r5ittqcots" path="res://scenes/game.gd" id="1_p57ef"]
[ext_resource type="Texture2D" uid="uid://blhlf2b4y0mxn" path="res://graphics/back sprites/Atrox.png" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://e0jsnv0ayrfj" path="res://graphics/battle sprites/Cleaf.png" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://hkfpdkwlstxn" path="res://scenes/input_menu.tscn" id="4_u5sy4"]
[ext_resource type="PackedScene" uid="uid://buj5ikdfsod5i" path="res://scenes/monster_stats.tscn" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://46jp6dtde6vq" path="res://graphics/attack effects/claw.png" id="7_u5sy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gee14"]
atlas = ExtResource("3_p57ef")
region = Rect2(0, 0, 96, 96)

[sub_resource type="Animation" id="Animation_u5sy4"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gee14"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0tnpc"]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gee14"]
_data = {
&"Attack": SubResource("Animation_0tnpc"),
&"Idle": SubResource("Animation_u5sy4"),
&"RESET": SubResource("Animation_gee14")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p57ef")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lbhrr")

[node name="Monsters" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="TextureRect" parent="Monsters"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 1.0
anchor_right = 0.05
anchor_bottom = 1.0
grow_vertical = 0
texture = ExtResource("2_iywne")

[node name="Enemy" type="TextureRect" parent="Monsters"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.4
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_gee14")

[node name="InputMenu" parent="." instance=ExtResource("4_u5sy4")]
layout_mode = 1

[node name="Stats" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerMonsterStats" parent="Stats" instance=ExtResource("5_iywne")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5

[node name="EnemyMonsterStats" parent="Stats" instance=ExtResource("5_iywne")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2

[node name="AttackSprite" type="Sprite2D" parent="."]
position = Vector2(746, 141)
scale = Vector2(4, 4)
texture = ExtResource("7_u5sy4")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gee14")
}
autoplay = "Idle"

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="selected" from="InputMenu" to="." method="_on_input_menu_selected"]
[connection signal="dead" from="Stats/PlayerMonsterStats" to="." method="_on_player_monster_stats_dead"]
[connection signal="dead" from="Stats/EnemyMonsterStats" to="." method="_on_enemy_monster_stats_dead"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
